# event-roster

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy-production.yml  migrate-production.yml
.superpowers/sdd/: task-2-report.md  task-4-report.md
apps/password-service/: .gcloudignore  Dockerfile  pyproject.toml
apps/password-service/scripts/: assert_evidence.py  run_remote_probe.py
apps/password-service/src/password_service/: api.py  config.py  kdf.py  main.py  make_dummy.py  signature.py
apps/password-service/tests/: conftest.py  test_api.py  test_kdf.py  test_probe_scripts.py  test_signature.py
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json
apps/worker/: .ignore  package.json  tsconfig.json  tsconfig.scripts.json  vitest.config.ts  worker-configuration.d.ts  wrangler.e2e.jsonc  wrangler.jsonc  wrangler.test.jsonc
docs/: api.md  architecture.md
docs/adr/: 0001-workers-free-capability-gate.md  0002-cloud-run-password-service-capability.md  0003-workers-bcrypt-capability-gate.md  0004-workers-free-pragmatic-auth.md
docs/operations/: deployment.md  monthly-check.md  recovery.md
spikes/cloud-run-auth-capability/: package.json  tsconfig.json  wrangler.jsonc
spikes/workers-bcrypt-capability/: package.json  tsconfig.json  tsconfig.scripts.json  worker-configuration.d.ts  wrangler.jsonc
spikes/workers-free-capability/: package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
(+226 files in other folders)
