[project]
name = "event-roster-password-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "argon2-cffi>=23.1,<26",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = ["httpx>=0.28,<1", "pytest>=8,<9", "ruff>=0.8,<1"]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/password_service"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead\\.:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py313"
